correction text overflow

--- a/style/layout/_header.scss
+++ b/style/layout/_header.scss
@@ -18,9 +18,7 @@ header {
       margin-left: 17px;
       margin-right: -20px;
       color: black;
-      &:hover{
-        color: $color-tertiary;
-      }
+   
     }
   }
 /*
